--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-slate-900 text-white;
+}
+
+pre {
+  @apply block w-full overflow-scroll h-96 border-2 border-green-200 p-5 m-3;
+}
